...
  },
  "ja": {
    "appTitle": "IDEA Engineering Q-15",
    "login": "サインイン",
    "username": "ユーザー名",
    "password": "パスワード",
    "search": "管理対象ドキュメントを検索",
    "searchAction": "検索",
    "browser": "ドキュメントブラウザー",
    "detail": "ドキュメント詳細",
    "checkout": "チェックアウト",
    "openWorkspace": "Workspace で開く",
    "checkinStatus": "チェックイン状態",
...
